--- a/root/src/partials/_head.html
+++ b/root/src/partials/_head.html
@@ -20,6 +20,18 @@
   })(window, document, "script", "dataLayer", "GTM-KLJNT5P");
 </script>
 <!-- End Google Tag Manager -->
+  
+<!-- nprds analytics -->
+<script type="text/javascript">
+  (function () {
+    var ga = document.createElement("script");
+    ga.type = "text/javascript";
+    ga.async = true;
+    ga.src = "//stream.publicbroadcasting.net/analytics/aac6.js";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 
 <!-- Safari, you're the worst -->
 <meta name="format-detection" content="telephone=no" />
